# repo-starter

./: Makefile  README.md  package-lock.json  package.json
.github/workflows/: publish.yml
lib/: generate-claude-md.mjs  scaffold.mjs
template/: Makefile  drizzle.config.ts  env.example  gitignore  next.config.ts  package.json  pnpm-workspace.yaml
template/agents/: env.example  main.py
template/patches/: drizzle-kit@0.31.9.patch
template/src/app/: layout.tsx  page.tsx
template/src/app/api/health/: route.ts
template/src/components/ui/: card.tsx
template/src/db/: index.ts
template/src/db/schema/: users.ts
templates/agents/agno/agents/: example_agent.py  main.py  pyproject.toml
templates/agents/pydantic-ai/agents/: Dockerfile  db.py  env.example  example_agent.py  main.py  pyproject.toml
templates/base/: docker-compose.yml  dockerignore
templates/base/supabase/: config.toml
templates/base/supabase/migrations/: 20240101000000_initial.sql
templates/frontends/nextjs/: Dockerfile  Makefile  env.example  package.json
templates/frontends/nextjs/src/: middleware.ts
templates/frontends/nextjs/src/app/: globals.css
templates/frontends/nextjs/src/hooks/: use-current-user.ts
templates/frontends/vite/: Dockerfile  Makefile  README.md  env.example  index.html  nginx.conf  package.json
templates/frontends/vite/src/: App.tsx  app.css  main.tsx
templates/frontends/vite/src/db/: types.ts
templates/frontends/vite/src/hooks/: use-current-user.ts
templates/frontends/vite/src/lib/: supabase.ts
templates/frontends/vite/src/pages/: home.tsx  (+2 more)
(+10 files in other folders)
